# chat-app

./: .gitignore  CMakeLists.txt  c_run.sh  g_run.sh  glad.c  imgui.ini  s_run.sh
dependencies/include/glad/: glad.h
include/client/: chat_ui.hpp  ui.hpp
include/client/ChatUI/: chatbox.hpp  message.hpp
src/client/: chat_ui.cpp  main.cpp  ui.cpp
src/client/ChatUI/: chatbox.cpp
src/server/: main.cpp
src/shared/include/: constants.hpp  render_ui.hpp
